# gjy_project

./: .gitignore  CMakeLists.txt  dirty_models_report.csv  mixed_test.stp  rivet_gnn.pth  rivet_plate.stp  train_data.csv  train_rivet_gcn.py  visualize_rivets.py
data/: current_inference.csv  full_training_set.csv  rivet_plate.stp  test_1.stp  train_data.csv  train_model.stp
data/dirty_training_set/: model_28.stp  model_31.stp  model_32.stp  model_34.stp  model_35.stp  model_39.stp  model_4.stp  model_50.stp  model_51.stp  model_54.stp  model_66.stp  model_69.stp  model_71.stp  model_72.stp  model_76.stp  model_78.stp  model_79.stp  model_8.stp  model_84.stp  model_94.stp  model_98.stp
doc/: 思路设计.txt
include/: FeatureClassifier.h  FeatureExtractor.h  FeatureInfo.h  GeometryModifier.h  ModelGenerator.h  Workflow.h
python/: screen_dirty_models.py  train_rivet_gcn.py  visualize_rivets.py
src/: FeatureClassifier.cpp  FeatureExtractor.cpp  GeometryModifier.cpp  ModelGenerator.cpp  Workflow.cpp  main.cpp
